@@ -1,0 +1,152 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>{characterName} - {characterLevel}/{characterJobLevel} - OpenKore</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<script type='text/javascript' src='js/jquery.min.js'></script>
+	<script type="text/javascript" src="js/bootstrap-2.0.2.js"></script>
+	<link href="css/custom.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+	<script type='text/javascript'>
+		<!-- tooltip para icones -->
+		!function( $ ){
+		$(function () {	
+		$('[rel=tooltip]').tooltip();
+		});
+		}( window.jQuery )
+	</script>
+</head>
+<body>
+
+<script type="text/javascript" defer="defer">
+			function send_command() {
+				var lockMap = document.getElementById("lockMap");
+				window.location.href = '../handler?command='conf + lockMap + lockMap.value + '&page=config.html';
+			}	
+			function submitenter(e) {
+				var keycode;
+				if (window.event) keycode = window.event.keyCode;
+
+				if (keycode == 13) {
+					send_command();
+				}
+			}
+</script>
+
+
+<div class="navbar">
+  <div class="navbar-inner">
+    <a class="brand">OpenKore</a>
+    <ul class="nav">
+      <li class="active"><a>{characterName}</a></li>
+      <li><a>Base Level: {characterLevel}</a></li>
+      <li><a>Job Level: {characterJobLevel}</a></li>
+	  <li><a>userAccount: {userAccount}</a></li>
+	  <li><a>Hora: {time}</a></li>
+    </ul>
+	<a href="/handler?command=quit" class="btn btn-danger btn-mini pull-right"><i class="icon-off icon-white"></i> OFF</a>
+  </div>
+</div>
+
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span2">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Menu</li>
+              <li><a href="index.html"><i class="icon-user"></i> Status</a></li>
+              <li><a href="inventory.html"><i class="icon-chevron-right"></i> Invent&aacute;rio</a></li>
+			  <li class="active"><a href="inventory.html"><i class="icon-cog"></i> Config</a></li>
+              <li><a href="console.html"><i class="icon-chevron-right"></i> Console</a></li>
+              <li><a href="chatlog.html"><i class="icon-comment"></i> ChatLog</a></li>
+              <li><a href="guild.html"><i class="icon-chevron-right"></i> Guild</a></li>
+              <li><a href="shop.html"><i class="icon-shopping-cart"></i> Shop</a></li>
+              <li><a href="npcs.html"><i class="icon-chevron-right"></i> NPC&#39;s</a></li>
+              <li><a href="skills.html"><i class="icon-chevron-right"></i> Skills</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="span9">
+          <div class="row-fluid">
+            <div class="span9">
+			<div class="tabbable">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#config" data-toggle="tab">config</a></li>
+					<li><a href="#macros" data-toggle="tab">macros</a></li>
+					<li><a href="#timeouts" data-toggle="tab">timeouts</a></li>
+				</ul>
+				<div class="tab-content">
+					<div class="tab-pane active" id="config">
+					
+						<div class="span8 well">
+						<div class="pull-right"><span class="label label-important">Change your config!</span></div>
+							<br />
+							<div class="input-append" rel="tooltip" title="Insert the map name!">
+							<input class="span7" id="lockMap" type="text" placeholder="lockMap" onKeyPress="submitenter(this.event)">
+							<button class="btn" type="button" onClick="send_command()">Change</button>
+							</div>
+						</div>
+					
+						<div class="span4 well">
+							<div class="pull-right"><span class="label">reloads</span></div>
+							<a class="btn" href="/handler?command=reload+all&page=config.html">all</a><br /><br />
+							<a class="btn" href="/handler?command=reload+items_control&page=config.html">items_control</a><br /><br />
+							<a class="btn" href="/handler?command=reload+mon_control&page=config.html">mon_control</a><br /><br />
+							<a class="btn" href="/handler?command=reload+pickupitems&page=config.html">pickupitems</a><br /><br />
+							<a class="btn" href="/handler?command=reload+priority&page=config.html">priority</a><br /><br />
+							<a class="btn" href="/handler?command=reload+shop&page=config.html">shop</a><br />
+						<!--
+						</div>
+						<div class="span4 well">
+						-->
+						<br /><br />
+						<div class="pull-right"><span class="label">route</span></div>
+							<a class="btn" href="/handler?command=sit&page=config.html">sit</a><br /><br />
+							<a class="btn" href="/handler?command=stand&page=config.html">stand</a><br /><br />
+							<a class="btn" href="/handler?command=autobuy&page=config.html">autoBuy</a><br /><br />
+							<a class="btn" href="/handler?command=autosell&page=config.html">autoSell</a><br /><br />
+							<a class="btn" href="/handler?command=autostorage&page=config.html">autoStorage</a><br /><br />
+							<a class="btn" href="/handler?command=tele&page=config.html">tele</a><br />						
+						</div>
+						
+					</div>
+					
+					
+					<div class="tab-pane" id="macros">
+					<p>
+					<a class="btn btn-small btn-warning" href="/handler?command=reload+macros&page=config.html">reload macros.txt</a>
+					<!--
+					<a class="btn btn-small btn-danger" href="/handler?command=ai+off&page=config.html">ai off</a>
+					<a class="btn btn-small btn-warning" href="/handler?command=ai+manual&page=config.html">ai manual</a>
+					<a class="btn btn-small btn-success" href="/handler?command=ai+on&page=config.html">ai on</a>
+					-->
+					</p>
+					</div>
+					
+					
+					<div class="tab-pane" id="timeouts">
+
+					</div>
+					
+	
+				</div>
+			</div>			
+            </div>
+          </div>
+		  
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p align="center">BonScott &copy; webMonitor 2012</p>
+      </footer>
+
+    </div>
+  </body>
+</html>
